--- a/resources/style.css
+++ b/resources/style.css
@@ -4,6 +4,21 @@ body {
     margin: 0px;
 }
 
+#score {
+    color: white;
+    border: 1px solid white;
+    height: 40px;
+    width: 70px;
+    text-align: center;
+    padding-top: 15px;
+    position: absolute;
+    top: 10px;
+    left: 250px;
+}
+#score h3 {
+    margin: 0px;
+}
+
 div.row {
     height: 20px;
 }
