--- a/resources/style.css
+++ b/resources/style.css
@@ -13,7 +13,7 @@ body {
     padding-top: 15px;
     position: absolute;
     top: 10px;
-    left: 250px;
+    left: 550px;
 }
 #score h3 {
     margin: 0px;
@@ -42,6 +42,15 @@ div.coin {
 }
 div#pacman {
     background: url('images/pacman.webp');
+    background-repeat: no-repeat; 
+    background-position: center;
+    background-size: cover;
+    width: 20px;
+    height: 20px;
+    position: absolute;
+}
+div#ghost1, div#ghost2, div#ghost3 {
+    background: url('images/ghost1.png');
     background-repeat: no-repeat; 
     background-position: center;
     background-size: cover;
